Add radio buttons

--- a/index.css
+++ b/index.css
@@ -1,6 +1,7 @@
 .custom-checkbox {
-  width: 150px;
-  height: 150px;
+  display: inline-block;
+  width: 50px;
+  height: 50px;
   cursor: pointer;
 }
 
@@ -13,7 +14,7 @@
 }
 
 .custom-checkbox [type="checkbox"] + svg > path {
-  stroke-width: 4;
+  stroke-width: 8;
 }
 
 .custom-checkbox [type="checkbox"] + svg > path.check {
@@ -28,4 +29,46 @@
 
 .custom-checkbox [type="checkbox"]:checked + svg > path.check {
   stroke-dashoffset: 0%;
+}
+
+.radio-buttons {
+  display: inline-block;
+}
+
+.custom-radio {
+  display: inline-block;
+  width: 50px;
+  height: 50px;
+  cursor: pointer;
+}
+
+.custom-radio label {
+  cursor: pointer;
+}
+
+.custom-radio [type="radio"] svg {
+  cursor: pointer;
+}
+
+.custom-radio [type="radio"] {
+  display: none;
+}
+
+.custom-radio [type="radio"] + svg > .outer-circle {
+  stroke-width: 8;
+}
+
+.custom-radio [type="radio"] + svg > .inner-circle {
+  transition: stroke-width 0.2s ease-in-out;
+  stroke-width: 8;
+}
+
+.custom-radio [type="radio"]:not(:checked) + svg > .inner-circle {
+  stroke-width: 0;
+  stroke-linecap: round;
+}
+
+.custom-radio [type="radio"]:checked + svg > .inner-circle {
+  stroke-width: 50;
+  stroke-linecap: round;
 }
