--- a/style.scss
+++ b/style.scss
@@ -134,6 +134,8 @@ $active-color: orange;
 @mixin tab($number) {
   #{"#tab" + $number}:checked {
     & ~ .tabs > [for=#{"tab" + $number}] {
+      color: black;
+
       &::after {
         width: 100%;
       }
@@ -152,13 +154,32 @@ $active-color: orange;
 
   .tabs {
     display: flex;
+    height: 45px;
 
     label {
-      user-select: none;
+      display: flex;
       position: relative;
+      align-items: center;
+      justify-content: center;
+      user-select: none;
       flex-grow: 1;
-      text-align: center;
       cursor: pointer;
+      font-size: 25px;
+      color: $disabled-color;
+
+      &:hover {
+        color: darken($disabled-color, 20%);
+      }
+
+      &::before {
+        position: absolute;
+        content: '';
+        width: 100%;
+        height: 1px;
+        bottom: 0;
+        left: 0;
+        background-color: $disabled-color;
+      }
 
       &::after {
         position: absolute;
@@ -167,7 +188,7 @@ $active-color: orange;
         transition: width 0.2s ease-in-out;
         background-color: $active-color;
         bottom: 0;
-        height: 10px;
+        height: 7px;
         left: 50%;
         transform: translateX(-50%);
       }
